working drag and drop action
