# projects/automat-api/src/API/models.ts
@@ -7,9 +7,11 @@ export { BorrowDto } from './models/borrow-dto';
 export { ControllerLoginDto } from './models/controller-login-dto';
 export { GesammtBorrowsDto } from './models/gesammt-borrows-dto';
 export { InvalidateQrCodeDto } from './models/invalidate-qr-code-dto';
+export { ItemChangeLocationDto } from './models/item-change-location-dto';
 export { ItemDetailedDto } from './models/item-detailed-dto';
 export { ItemDisplayDto } from './models/item-display-dto';
 export { ItemGetAllDto } from './models/item-get-all-dto';
+export { ItemLocationDto } from './models/item-location-dto';
 export { LogQrCodeDto } from './models/log-qr-code-dto';
 export { QrCodeDto } from './models/qr-code-dto';
 export { TaeglicheUserDto } from './models/taegliche-user-dto';
