# projects/automat-api/src/API/models/item-location-dto.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ItemLocationDto {
+  id?: number;
+  location?: null | string;
+}
